# osdpl-admission-controller

./: .dockerignore  .gitignore  AUTHORS  ChangeLog  Dockerfile  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  uwsgi.ini
charts/osdpl-admission-controller/: Chart.yaml  values.yaml
charts/osdpl-admission-controller/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  imagePullSecret.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  webhookConfig.yaml  webhookKeys.yaml
charts/osdpl-admission-controller/templates/tests/: test-connection.yaml
osdpl_admission_controller/: controller.py  schemas.json  wsgi.py
osdpl_admission_controller/tests/: test_controller.py
osdpl_admission_controller/validators/: __init__.py  barbican.py  base.py  keystone.py
