[metadata]
name = osdpl-admission-controller
author = Mirantis Inc
author-email = oscore-dev@mirantis.com
summary = Admission Controller for Kubernetes OpenStackDeployment
description-file =
    README.md
home-page = https://github.com/openvdro/osdpl-admission-controller
python-requires = >= 3.7
classifier =
    Development Status :: 1 - Alpha
    Environment :: Kubernetes
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    osdpl_admission_controller
data_files =
    osdpl_admission_controller/schemas.json = osdpl_admission_controller/schemas.json

[pbr]
skip_authors = true
skip_changelog = true
